--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  margin-left: 5em;
 }
 
 .App-logo {
@@ -30,4 +30,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.node {
+  margin-left: 2em;
 }
